Adeed up a node for designer

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -16,11 +16,8 @@
 # next.js
 /.next/
 /out/
-
-# production
-/build
-
-# misc
+.env.production
+.env.developmentisc
 .DS_Store
 *.pem
 
@@ -31,7 +28,6 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
